--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx">
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+
+    </script>
   </body>
 </html>
