Add dark theme support for login/register

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kanban</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class='bg-white2 dark:bg-black3'></div>
     <script type="module" src="/src/main.tsx">
       // On page load or when changing themes, best to add inline in `head` to avoid FOUC
 
