--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root" class='bg-white2 dark:bg-black3'></div>
+    <div id="modal-root"></div>
     <script type="module" src="/src/main.tsx">
       // On page load or when changing themes, best to add inline in `head` to avoid FOUC
 
